final Du v2.0